# ultrasync

./: .coveragerc  .gitignore  .travis.yml  MANIFEST.in  README.md  SECURITY.md  dev-requirements.txt  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 3_question.md
.github/workflows/: tests.yml
tests/: test_cli.py  test_comnav.py  test_comnav_0_106.py  test_comnav_0_108-zone-check.py  test_comnav_0_108.py  test_comnav_0_108_burglar_alarm_on.py  test_config.py  test_login.py  test_seq.py  test_xgen8_bypass.py  test_xgen8_general.py  test_xgen8_nxg8zbo.py  test_xgen_general.py  test_zerowire.py  test_zerowire_armed.py  test_zerowire_general.py  test_zones.py
tests/var/: login.cgi-okay  status.json-okay  zones.htm-okay  zstate.json-okay
tests/var/comnav/: area.htm  engeu.js  master.js  seq.xml  status.js  status.xml  zones.htm  zstate.xml
tests/var/comnav/0.106/: area.htm  master.js  seq.w.update.xml  seq.xml  status.js  status.xml  zones.htm  zstate.bank0.w.update.xml  zstate.bank4.w.update.xml  zstate.xml
tests/var/comnav/0.108/: area.htm  master.js  seq.w.update.xml  seq.xml  status.js  status.xml  zones.htm  zstate.xml
tests/var/comnav/0.108-burglar-alarm-on/: area.htm  history.htm  master.js  seq.xml  status.xml  zones.htm  zstate.xml
tests/var/comnav/0.108-zone-test/: area.htm  seq.w.update.xml  seq.xml  status.xml  zones.htm  zstate.xml
tests/var/comnav/0.226/: index.htm
tests/var/xgen/general/: area.htm  (+7 more)
ultrasync/: __init__.py  cli.py  common.py  config.py  exceptions.py  logger.py  lookup.py  main.py
(+45 files in other folders)
