[bdist_wheel]
universal = 1

[metadata]
# ensure LICENSE is included in wheel metadata
license_file = LICENSE

[flake8]
# We exclude packages we don't maintain
exclude = .eggs,.tox
ignore = E722,W503,W504,W605
statistics = true
builtins = _

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose -ra
python_files = tests/test_*.py
filterwarnings =
	once::Warning
strict = true
